update SampleTest.java with correct methodrule